<resources>
    <string name="app_name">FoodLine</string>
    <string name="app_logo">app logo</string>
    <string name="don_t_have_an_account">Don"'"t have an account?</string>
    <string name="register_now_btn">" "<u>Register Now</u></string>
    <string name="login">Login</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_btn">" "<u>Login</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_base">BaseActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="continue_payment">Continue Payment</string>
    <string name="ordering_for">ORDERING FOR</string>
    <string name="grand_total">Grand Total</string>
    <string name="logout">Logout</string>
    <string name="your_cart_looks_empty">Your cart looks empty :(</string>
    <string name="edit_profile">Edit profile</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="options">OPTIONS</string>
    <string name="no_internet_connection">Check your Internet connection and try again :(</string>
    <string name="something_went_wrong">Something went wrong :(</string>
    <string name="user">User</string>
    <string name="search">Search...</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="no_new_orders">No new orders</string>
</resources>