<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AccountFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/ripple_effect_recycler_view"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textColor="@color/app_back"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/user_name" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/food_image"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/app_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/gray_tint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/options"
                android:textColor="#A3A2A2"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_recycler_view"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="start"
                android:paddingVertical="10dp"
                android:text="@string/history"
                android:textSize="17sp"
                app:drawableStartCompat="@drawable/ic_history" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_recycler_view"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="start"
                android:paddingVertical="10dp"
                android:text="@string/settings"
                android:textSize="17sp"
                app:drawableStartCompat="@drawable/ic_settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_recycler_view"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="start"
                android:paddingVertical="10dp"
                android:text="@string/about"
                android:textSize="17sp"
                app:drawableStartCompat="@drawable/ic_about" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/gray_tint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect_recycler_view"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:paddingVertical="10dp"
            android:text="@string/logout"
            android:textSize="17sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>